# swagger.yaml
@@ -170,7 +170,7 @@ paths:
         default:
           description: Неизвестная ошибка
 
-  /api/nomenclature/get/{item_id}:
+  /app/nomenclature/get/{item_id}:
     get:
       operationId: main.nomenclature_get
       parameters:
@@ -190,7 +190,7 @@ paths:
         500:
           description: "Ошибка на сервере"
 
-  /api/nomenclature/add:
+  /app/nomenclature/add:
     post:
       operationId: main.nomenclature_add
       consumes:
@@ -214,7 +214,7 @@ paths:
         500:
           description: "Ошибка на сервере"
 
-  /api/nomenclature/update:
+  /app/nomenclature/update:
     post:
       operationId: main.nomenclature_update
       consumes:
@@ -239,7 +239,7 @@ paths:
         500:
           description: "Ошибка на сервере"
 
-  /api/nomenclature/delete/{item_id}:
+  /app/nomenclature/delete/{item_id}:
     delete:
       operationId: main.nomenclature_delete
       parameters:
@@ -260,7 +260,7 @@ paths:
         500:
           description: "Ошибка на сервере"
         
-  /api/save_data:
+  /app/save_data:
     post:
       operationId: main.save_data
       consumes:
@@ -277,7 +277,7 @@ paths:
         500:
           description: "Ошибка на сервере"
 
-  /api/upload_data:
+  /app/upload_data:
     post:
       operationId: main.upload_data
       consumes:
@@ -294,7 +294,7 @@ paths:
         500:
           description: "Ошибка на сервере"
 
-  /api/get_osb:
+  /app/get_osb:
     get:
       summary: Получить Оборотно-сальдовая ведомость
       operationId: main.get_osb
